--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,3 +1,3 @@
-jdbc.url=jdbc:mysql://localhost:3306/shandong-human-resource?allowMultiQueries=true
+jdbc.url=jdbc:mysql://localhost:3306/shandong-human-resource?allowMultiQueries=true&characterEncoding=utf8
 jdbc.username=root
 jdbc.password=
